<resources>
    <string name="app_name">PennyTracker</string>
    <string name="welcome">Welcome to Penny-Pilot</string>
    <string name="companion">Your personal budget tracking companion</string>
    <string name="loginAcc">Login</string>
    <string name="regAcc">Register</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="enterEmail">Enter your email</string>
    <string name="password">Password</string>
    <string name="enterPw">Enter your password</string>
    <string name="chooseUsername">Choose a username</string>
    <string name="choosePassword">Choose a password</string>
    <string name="confirmation">Confirm your password</string>
    <string name="confirmPass">Confirm Password</string>
    <string name="existingAcc">Already have an account? Click here</string>
    <string name="register">Register your account</string>
    <string name="addExpense">Add Expense</string>
    <string name="amount">Amount</string>
    <string name="date">Date</string>
    <string name="number">0.00</string>
    <string name="dateFormat">dd/mm/yyyy</string>
    <string name="category">Add a category</string>
    <string name="description">Description</string>
    <string name="addDescription">What was this expense for?</string>
    <string name="uploadReceipt">Upload receipt photo</string>
    <string name="save">Save</string>
    <string name="monthlyGoals">Monthly Goals</string>
    <string name="minGoals">Enter a minimum monthly goal</string>
    <string name="maxGoals">Enter a maximum monthly goal</string>
    <string name="addCategory">Category</string>
    <string name="welcomeUser">Welcome, User</string>
    <string name="home">Home</string>
    <string name="expenses">Expenses</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="total_spent_r0_00">Total Spent: R0.00</string>
    <string name="budget_r2000">Budget: R2000</string>
    <string name="by_category">By Category</string>
    <string name="monthly_budget">Monthly Budget</string>
    <string name="enter_budget">Enter budget</string>
    <string name="category_limits">Category Limits</string>
    <string name="category_name_e_g_food">Category Name (e.g. Food)</string>
    <string name="limit">Limit</string>
    <string name="add">Add</string>
</resources>